--- a/index.html
+++ b/index.html
@@ -1,51 +1,124 @@
+<!-- Publish to br-architects006.surge.sh -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P1</title>
+    <title>BR Architects</title>
     <link rel="stylesheet" href="Style/style.css">
 </head>
 
 <body>
     <header>
-        <div id="div1">BR Architects</div><div id="div2"><span><a href="">Project</a></span><span> <a href="">About</a></span> <span><a
-                href="">Contact</a></span></div>
-        </span>
+        <div id="div1"><strong>BR  </strong> Architects</div>
+        <ul>
+            <li>Project</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+
     </header>
     <main>
         <div id="top_pic">
             <div>
-                <span>BR</span>Architects
+                <span>BR</span> Architects
             </div>
         </div>
         <h1>Project</h1>
         <section id="pics">
-           
-            <div class="pro_pics">
-                <div><img src="/images/house5.jpg" alt=""><span class="abc">Summer House</span></div>
-                <div><img src="/images/house2.jpg" alt=""><span class="abc">Brick House</span></div>
-                <div><img src="/images/house3.jpg" alt=""><span class="abc">Renovated House</span></div>
-                <div><img src="/images/house4.jpg" alt=""><span class="abc">Barn House</span></div>
+
+            <div class="pro_pics1">
+                <div><img src="/images/house5.jpg" alt="">
+                    <span class="abc">Summer House</span>
+                </div>
+                <div><img src="/images/house2.jpg" alt="">
+                    <span class="abc">Brick House</span>
+                </div>
+                <div><img src="/images/house3.jpg" alt="">
+                    <span class="abc">Renovated House</span>
+                </div>
+                <div><img src="/images/house4.jpg" alt="">
+                    <span class="abc">Barn House</span>
+                </div>
 
             </div>
-            <div class="pro_pics">
-                <div>
-                    <div> <img src="/images/house2.jpg" alt=""><span class="def">Brick House</span></div>
-                    <div><img src="/images/house5.jpg" alt=""><span class="def">Summer House</span></div>
-                    <div> <img src="/images/house4.jpg" alt=""><span class="def">Barn House</span></div>
-                    <div><img src="/images/house3.jpg" alt=""><span class="def">Renovated house</span></div>                     
+            <div class="pro_pics2">
+
+                <div> <img src="/images/house2.jpg" alt="">
+                    <span class="def">Brick House</span>
                 </div>
+                <div><img src="/images/house5.jpg" alt="">
+                    <span class="def">Summer House</span>
+                </div>
+                <div> <img src="/images/house4.jpg" alt="">
+                    <span class="def">Barn House</span>
+                </div>
+                <div><img src="/images/house3.jpg" alt="">
+                    <span class="def">Renovated house</span>
+                </div>
+
             </div>
         </section>
         <section>
-            <h1>About</h1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste veritatis dolorem dolore. Eos, explicabo
-            assumenda architecto rerum culpa suscipit non. Soluta nemo sed error aliquid nam, cum quasi vero deserunt!
-            Dolores tempore harum eius suscipit voluptates consequatur, perspiciatis incidunt pariatur rem itaque
-            nostrum? Amet eveniet facilis vel aut dolorum nihil blanditiis at hic, doloribus ad, sed, et sint harum
-            excepturi?
+            <div style="text-align: justify;">
+                <h1>About</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste veritatis dolorem dolore. Eos, explicabo
+                assumenda architecto rerum culpa suscipit non. Soluta nemo sed error aliquid nam, cum quasi vero
+                deserunt!
+                Dolores tempore harum eius suscipit voluptates consequatur, perspiciatis incidunt pariatur rem itaque
+                nostrum? Amet eveniet facilis vel aut dolorum nihil blanditiis at hic, doloribus ad, sed, et sint harum
+                excepturi?
+            </div> <br><br>
+            <div class="pro_pics1">
+                <div><img src="/images/team2.jpg" alt="" width="200px" height="133.2px"></div>
+
+                <div> <img src="/images/team1.jpg" alt="" width="200px" height="133.2px"></div>
+
+                <div> <img src="/images/team3.jpg" alt="" width="200px" height="133.2px"></div>
+
+                <div><img src="/images/team4.jpg" alt="" width="200px" height="133.2px"></div>
+            </div> <br>
+
+            <div id="abt2">
+                <div>
+                    <div class="name">John Doe</div>
+                    <div class="title">CEO & Founder</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+                    dolorem
+                    voluptatem obcaecati vitae eveniet fugit impedit quia id non veniam explicabo, tenetur recusandae
+                    porro nihil laudantium blanditiis. Enim, id officiis?<br>
+                    <button class="btn1">Contact</button>
+                </div>
+
+                <div>
+                    <div class="name">John Doe</div>
+                    <div class="title">Architect</div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+                    consequuntur, illo ea facere quasi, libero sequi odio obcaecati nisi dignissimos veniam earum
+                    excepturi, laudantium voluptatibus qui explicabo exercitationem quis sed? <br>
+                    <button class="btn1">Contact</button>
+                </div>
+
+                <div>
+                    <div class="name">Mike Ross</div>
+                    <div class="title">Architect</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+                    dolorem
+                    voluptatem obcaecati vitae eveniet fugit impedit quia id non veniam explicabo, tenetur recusandae
+                    porro nihil laudantium blanditiis. Enim, id officiis? <br>
+                    <button class="btn1">Contact</button>
+                </div>
+                <div>
+                    <div class="name">Dan Star</div>
+                    <div class="title">Architect</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+                    dolorem
+                    voluptatem obcaecati vitae eveniet fugit impedit quia id non veniam explicabo, tenetur recusandae
+                    porro nihil laudantium blanditiis. Enim, id officiis? <br>
+                    <button class="btn1">Contact</button>
+                </div>
+
+            </div>
+
+
+            </div>
             <h1>Contact</h1>
             <p>Lets get in touch and talk about your next project.</p><br>
             <form>
@@ -56,15 +129,15 @@
 
                 <input type="text" placeholder="Comment"><br>
 
-                <button>SEND MESSAGE</button>
+                <button id="btn2">SEND MESSAGE</button>
             </form>
         </section><br>
         <img src="/images/map.jpg" alt="" width="100%">
-        
+
     </main>
     <footer>
 
-        <div style="text-align: center;">Powered by <a href="https://Www.w3.css.com" >w3.css</a></div>
+        <div style="text-align: center;">Powered by <a href="https://Www.w3.css.com">w3.css</a></div>
     </footer>
 
 
